[package]
name = "whereabouts-server"
version = "0.1.0"
authors = ["Ben Vinck <ben_vinck@yahoo.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
confy = "0.4.0"
